<resources>
    <string name="app_name">TIPS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Search_Text">搜索</string>
    <string name="P_Name">姓名</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="VerifityCode">验证码</string>
    <string name="regist">注册</string>
    <string name="pass2">再次输入密码</string>
    <string name="found">完成</string>
</resources>
